--- a/2DContext/index.html
+++ b/2DContext/index.html
@@ -1,11 +1,11 @@
 <html>
 
 <head>
-<title>JavaScript PCB CAD Toolkit</title>
+<title>floating.js</title>
 </head>
 
 <body>
 
-<script src="jspcb.js"></script>
+<script src="floating.js"></script>
 </body>
 </html>
